project/logs/20250716_115145.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,profike:vs_6_0

Compile Succeeded, path:Object3d.VS.hlsl, profike:vs_6_0
 
Begin CompileShader,path:Object3d.PS.hlsl,profike:ps_6_0

Object3d.PS.hlsl:4:16: error: use of undeclared identifier 'Material'
ConstantBuffer<Material> gMaterial : register(b0);
               ^
Object3d.PS.hlsl:7:16: error: use of undeclared identifier 'DirectionalLight'
ConstantBuffer<DirectionalLight> gDirectionalLight : register(b1);
               ^
In file included from Object3d.PS.hlsl:51:
./object3d.hlsli:1:8: error: redefinition of 'TransformationMatrix'
struct TransformationMatrix
       ^
./object3d.hlsli:1:8: note: previous definition is here
struct TransformationMatrix
       ^
In file included from Object3d.PS.hlsl:51:
./object3d.hlsli:8:8: error: redefinition of 'VertexShaderOutput'
struct VertexShaderOutput
       ^
./object3d.hlsli:8:8: note: previous definition is here
struct VertexShaderOutput
       ^
Object3d.PS.hlsl:70:20: error: functions that differ only in their return type cannot be overloaded
VertexShaderOutput main(VertexSgaderInput input)
~~~~~~~~~~~~~~~~~~ ^
Object3d.PS.hlsl:17:19: note: previous definition is here
PixelShaderOutput main(VertexShaderOutput input)
~~~~~~~~~~~~~~~~~ ^

